# demo-quadtree

./: README.md  demo-quadtree.cabal
app/: Main.hs
src/: QuadTree.hs
